FileBrowser / Up-download (#69)
* Basis of fileBrowser implemented

* File Browser folder tree

* File Browser bars are on the form

* File Browser file expantion possible

* File Browser cancel Button implemented

* File Browser eventListener implemented

* File Browser finished merging

* File Browser improve drag and drop area no duplicate files

* Button alignment

* Correct Login to register page

* file Browser changes

* connected upload and download
added simple styling

* added dropbox metadata
added format functions to display metadata more readable

* fixed failing dropbox test

* LocalStorage download implementation (#65)

Co-authored-by: sevimrid <sevimrid@students.zhaw.ch>

* added progress tracking
added refreshing of dropbox-token

* updated connecting to dropbox.
dropbox now refreshes token

* prepared localstorage

* fixed merge conflicts

Co-authored-by: sevimrid <sevimrid@students.zhaw.ch>
Co-authored-by: Sandro Guerotto <guerosan@students.zhaw.ch>
Co-authored-by: ridvan-sevimli <68498010+ridvan-sevimli@users.noreply.github.com>